--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -10,6 +10,16 @@
   doi       = {10.1016/B978-0-12-801238-3.10886-4},
   author    = {Panayiotis Kyriacou and Karthik Budidha and Tomas Y Abay}
 }
+@article{MetACarboxy,
+  title={Measurement of carboxyhemoglobin and methemoglobin by pulse oximetry: a human volunteer study},
+  author={Barker, Steven J and Curry, Jeremy and Redford, Daniel and Morgan, Scott},
+  journal={The Journal of the American Society of Anesthesiologists},
+  volume={105},
+  number={5},
+  pages={892--897},
+  year={2006},
+  publisher={The American Society of Anesthesiologists}
+}
  @article{matthes,
   title     = {Untersuchungen über die Sauerstoffsättigung des Menschlichen arterienblutes},
   volume    = {179},
@@ -26,16 +36,14 @@
   doi       = {10.1378/chest.95.4.713},
   number    = {4},
   volume    = {95},
-  month     = {April},
   year      = {1989},
   journal   = {Chest},
-  issn      = {0012-3692},
   pages     = {713—715}
 }
 @article{1942oximeter,
   title     = {The oximeter, an instrument for measuring continuously the oxygen saturation of arterial blood in man},
   author    = {Millikan, Glenn A},
-  journal   = {Review of scientific Instruments},
+  journal   = {Review of Scientific Instruments},
   volume    = {13},
   number    = {10},
   pages     = {434--444},
@@ -80,6 +88,11 @@
   month     = {Nov},
   note      = {[online, citováno 2022-03-03]}
 } 
+@misc{skripta,
+  title     = {Skripta ke Kurzu pro instruktory indoor cyklistiky},
+  author    = {\text{Lukášová, Vejpustková}},
+  year      = {nedatováno}
+}
 @misc{picoDS,
   title     = {Raspberry Pi Pico Datasheet},
   url       = {https://datasheets.raspberrypi.com/pico/pico-datasheet.pdf},
