--- a/Pulzní oxymetrie Truksa, Tvrdík/Prilohy/Prirucka.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Prilohy/Prirucka.tex
@@ -5,7 +5,7 @@ Cílem této příručky je předat důležité informace komukoliv, kdo by se r
 \begin{itemize}
   \item Raspberry Pi Pico
   \item Vytištěné 3D modely (viz jednotlivé .stl soubory)
-  \item Oxymetr - například RCWL- 0530, nebo jiný velikostně kompatibilní 
+  \item Oxymetr - například RCWL-0530, nebo jiný velikostně kompatibilní 
   \item 0.91" 128 x 32 OLED displej se sběrnicí $I^2C$
   \item GeB LiPol Baterie 603048 900 mAh 3.7 V JST-PH
   \item Nabíječka na Li-ion články - například TP4056
@@ -22,4 +22,4 @@ Cílem této příručky je předat důležité informace komukoliv, kdo by se r
 \par Pokud máte všechny součástky připravené, je konečně čas se pustit do stavby. Celou stavbu budeme dělat podle schématu celého obvodu (obrázek \ref{fig:Diagram}). Začneme horním PCB majícím na sobě displej a tlačítka. PCB prototypovou desku nařežeme tak, aby nám zbyla 46 x 25,6 mm velká část s mřížkou o rozměru 17 x 9 děr. Poté na ni můžeme začít pájet komponenty. Položení komponentů je jasné z 3D tištěného vrchního dílu, který má na konektory, tlačítka i displej jasně určené díry. Na spodní straně PCB bychom se měli vyvarovat vyčnívajícím věcem, které by mohly zabránit správnému spojení horního a spodního dílu této části oxymetru. Proto je vhodné zkrátit jakékoli piny které by moc vyčnívaly. Horní stranu zato můžeme použít pro kabílky přeskakující jiné části obvodu a případně pullupové rezistory pro dvě z tlačítek, které je sem možno jednoduše schovat. Po připájení všech součástek již stačí PCB vložit mezi dvě půlky horní části oxymetru a dané půlky slepit.
 \par Zbytek oxymetru můžeme pájet samostatně mimo samotné 3D tištěné části, ale musíme si dát pozor, protože náš 7 pinový vodič musí být protažen příslušnou dírou v těle oximetru dříve než bude připájen, a to tak, aby samičí konektor nejen vyčníval ven, ale dal se i ohnout a připojit nahoru do horní části oxymetru.
 \par Pokud máme dopájeno, můžeme začít vkládat elektroniku do samotného těla oxymetru. První na řadě je oxymetr samotný, který se prostrčí z vnitřku těla oxymetru ven na své místo do měřící komory. Tam je ho nejlepší správně narovnat a ze spodu přilepit tavnou pistolí. Dále dovnitř vsuneme samotné Pi Pico tak, aby jeho USB konektor zapadl do jemu příslušné díry, a Pico bylo zabezpečené i zezadu stěnou, jež je tam pro tento účel připravena. Poté již jen stačí umístit zbytek elektroniky. V tuto chvíli je třeba dávat si pozor na potenciální zkraty, kterým může zabránit například kaptonová páska. Teď již stačí jen vše zkontrolovat, připojit akumulátor a zasunout spodní dvířka.
-Z hlediska softwaru je třeba stáhnout Arduino IDE, v Tools > Board: > Boards manager… nainstalovat Arduino Mbed OS RP2040 Boards (verzi 2.7.2 nebo novější). Poté v Tools > Manage libraries… stáhnout MAX30100lib (verzi 1.2.1 nebo novější) a U8g2 (verzi 2.21.2 nebo novější). Poté již stačí připojit oxymetr k počítači, otevřít v Arduino IDE zdrojový kód, v Tools > Board: > Arduino Mbed OS RP2040 Boards > Raspberry Pi Pico a v Tools > Port: vybrat ten, který má u sebe Raspberry Pi Pico (ten je také potřeba znát pro případ využití programu pro stažení dat z oxymetru (příloha \ref{appn:Python})) a kliknout na tlačítko Upload (šipka doprava).
+Z hlediska softwaru je třeba stáhnout Arduino IDE, v Tools > Board: > Boards manager… nainstalovat Arduino Mbed OS RP2040 Boards (verzi 2.7.2 nebo novější). Poté v Tools > Manage libraries… stáhnout MAX30100lib (verzi 1.2.1 nebo novější) a U8g2 (verzi 2.21.2 nebo novější). Poté již stačí připojit oxymetr k počítači, otevřít v Arduino IDE zdrojový kód, v Tools > Board: > Arduino Mbed OS RP2040 Boards > Raspberry Pi Pico a v Tools > Port: vybrat ten, který má u sebe Raspberry Pi Pico (ten je také potřeba znát pro případ využití programu pro stažení dat z oxymetru) a kliknout na tlačítko Upload (šipka doprava).
