--- a/Pulzní oxymetrie Truksa, Tvrdík/main.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/main.tex
@@ -17,6 +17,7 @@
 
 \bibliographystyle{unsrtnat}
 \setcitestyle{authoryear,open={(},close={)}}
+\AtBeginDocument{\renewcommand{\harvardand}{,}}
 
 
 \newcommand\tema{Pulzní Oxymetrie}
