--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Prakticka/AnalyzaVyzkumu.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Prakticka/AnalyzaVyzkumu.tex
@@ -3,22 +3,22 @@ Z jedenácti jedinců, kteří se výzkumu zúčastnili, oxymetr zaznamenal data
 \subsection{Výsledky výzkumu}
 \begin{figure}[ht]
 \centering
-  \includegraphics[scale=0.35, center]{Kapitoly/Prakticka/Obrazky/SpatnyGraf.png}
-  \caption [Graf typického muže - nesportovce]{Většina výsledných grafů byla velmi podobná tomuto grafu jednoho z mužů - nesportovců; trend BPM byl celkově rostoucí, avšak v rámci sekund hodnoty oscilovaly s velkou amplitudou. Vliv tohoto krátkodobého cvičení na $SpO_2$ nebyl pozorován. Vlastní dílo}
+  \includegraphics[scale=0.55, center]{Kapitoly/Prakticka/Obrazky/SpatnyGraf.png}
+  \caption [Graf typického muže - nesportovce]{Většina výsledných grafů byla velmi podobná tomuto grafu jednoho z mužů - nesportovců; trend BPM byl celkově rostoucí, avšak v rámci sekund hodnoty oscilovaly s velkou amplitudou. Vliv tohoto krátkodobého cvičení na $SpO_2$ nebyl pozorován.}
   \label{fig:Spatny}
 \end{figure}
 Na většině výsledků lze, podobně jako na obrázku \ref{fig:Spatny}, vidět stoupající trend u tepové frekvence, nicméně okamžité hodnoty velmi výrazně oscilují, což je velmi pravděpodobně způsobeno chybou při měření. Také není možné dovodit žádný vztah mezi touto krátkodobou zátěží a $SpO_2$. Při měření $SpO_2$ také evidentně došlo k chybě, kdy oxymetr nezaznamenal tep a vyhodnotil saturaci jako 0\%.
 \begin{figure}[ht]
 \centering
-  \includegraphics[scale=0.76, center]{Kapitoly/Prakticka/Obrazky/DobryGraf.png}
-  \caption [Očekávaný graf muže - nesportovce]{Tento graf nejlépe demonstruje očekávané výsledky měření - BPM s časem (a tedy i námahou) roste, ke konci klesá saturace kyslíku v krvi. Vlastní dílo}
+  \includegraphics[scale=0.55, center]{Kapitoly/Prakticka/Obrazky/DobryGraf.png}
+  \caption [Očekávaný graf muže - nesportovce]{Tento graf nejlépe demonstruje očekávané výsledky měření - BPM s časem (a tedy i námahou) roste, ke konci klesá saturace kyslíku v krvi.}
   \label{fig:Dobry}
-\end{figure}
+\end{figure}y
 \par Obrázek \ref{fig:Dobry} ukazuje data, jež byla nejblíže naší hypotéze - tepová frekvence postupně roste (ačkoliv stále s oscilacemi), $SpO_2$ s rostoucí námahou a zadýcháváním ke konci naopak klesá. Je potřeba podotknout že se opravdu jedná o jediný graf, který naznačuje výrazněji tento trend.
 \begin{figure}[ht]
 \centering
-  \includegraphics[scale=0.6, center]{Kapitoly/Prakticka/Obrazky/Kontrola.png}
-  \caption [Kontrolní graf v klidu]{Kontrolní graf představuje nejpravděpodobnější využití našeho oxymetru - klidové měření ve středně dlouhých časových úsecích. Vlastní dílo}
+  \includegraphics[scale=0.55, center]{Kapitoly/Prakticka/Obrazky/Kontrola.png}
+  \caption [Kontrolní graf v klidu]{Kontrolní graf představuje nejpravděpodobnější využití našeho oxymetru - klidové měření ve středně dlouhých časových úsecích.}
   \label{fig:Control}
 \end{figure}
 \par Graf na obrázku \ref{fig:Control} konečně ukazuje naměřené hodnoty při středně dlouhém klidovém měření - lze vidět, že nedochází ke změnám saturace kyslíku v krvi, ani k výrazným změnám v naměřeném pulzu. Přesto jsou hodnoty, vzhledem k jejich vyšší stabilitě, reprezentativnější při zobrazení klouzavého průměru z posledních 20 hodnot. Dva úseky zvýšených hodnot na konci odpovídají zvýšené aktivitě vykonávané měřenou osobou.
